--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
                             <finalName>duplicatesVisitor</finalName>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>C:\projects\job4j_design\chapter_002\src\main\java\io\duplicates\DuplicatesVisitor</mainClass>
+                                    <mainClass>io.duplicates.DuplicatesVisitor</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
